--- a/assets/scss/home-responsive.scss
+++ b/assets/scss/home-responsive.scss
@@ -73,7 +73,6 @@
     }
 
     .magazine {
-      //padding-top: 360px;
       padding-top: 20px;
 
       &:before {
@@ -85,12 +84,8 @@
       }
 
       .magazine-header {
-        //position: absolute;
-        //top: 0;
         width: 100%;
         height: auto;
-        //transform: translate(0, -44%);
-        //transform: translate(0, -70%);
         margin-top: -200px;
       }
 
@@ -99,7 +94,6 @@
       }
 
       .tips-container {
-        //margin-top: 350px;
         margin-top: 30px;
       }
 
@@ -227,10 +221,30 @@
     .common-searches {
       padding-top: 19vw;
     }
+
+    .common-searches {
+      .section-title {
+        color: #d8cdba;
+      }
+    }
   }
 
   @media(max-width: 599px) {
     padding-top: 60px !important;
+
+    .video-container {
+      .text {
+        .video-title {
+          font-size: 14pt;
+        }
+      }
+
+      &.small-video {
+        .fa-play-circle {
+          font-size: 65pt;
+        }
+      }
+    }
 
     .logo {
       width: 200px !important;
@@ -365,7 +379,7 @@
     }
 
     .magazine {
-      padding-top: 380px;
+      padding-top: 400px;
 
       .magazine-header {
         margin-top: -480px;
@@ -391,6 +405,16 @@
       .questionnaire-text {
         font-size: 14pt;
       }
+
+      .questionnaire-content-icon {
+        width: 74px !important;
+      }
+    }
+  }
+
+  @media (max-width: 499px) {
+    .categories {
+      padding-top: 51vw;
     }
   }
 
@@ -402,22 +426,26 @@
       }
     }
 
-    .common-searches {
-      .section-title {
-        color: #d8cdba;
+    .list-item-with-icon {
+      .list-item-icon {
+        height: 34px;
+      }
+
+      h5 {
+        font-size: 10pt;
       }
     }
-  }
 
-  @media (max-width: 499px) {
     .categories {
-      padding-top: 51vw;
+      .list {
+        padding: 0;
+      }
     }
   }
 
   @media (max-width: 374px) {
     .categories {
-      padding-top: 60vw;
+      padding-top: 70vw;
       padding-bottom: 60vw;
     }
 
