--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -613,6 +613,12 @@ body {
             align-items: center;
             width: 44px;
             margin-right: 30px;
+
+            img {
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
+            }
           }
 
           span {
